Issue #106: Re-align Shout Functionality
* Simplifies templates
* Performs simple match on first character of message content to see if should shout
* Strips message modifier

--- a/app/assets/stylesheets/theatre.scss
+++ b/app/assets/stylesheets/theatre.scss
@@ -19,14 +19,14 @@ canvas {
     border: 1px solid YellowGreen;
 }
 
-#chat { 
-    width: 100%;  
-    height: 100%; 
+#chat {
+    width: 100%;
+    height: 100%;
     min-height: 100%;
     border: 0px
 }
 
-.shoutToChat {
+div.message > p.shout {
     color: red;
     font-weight: bold;
     font-size:15px;
@@ -34,20 +34,20 @@ canvas {
 
 
 
-#chat-body { 
-    
+#chat-body {
+
     width: 100%;
     max-width: 100%;
     height: 75vh;
     max-height: 100%;
-    min-height: 100%;  
+    min-height: 100%;
     overflow: scroll;
     margin-top: 2px;
     margin-bottom: 2px;
     border: 1px solid YellowGreen;
 }
 
-.panel-footer { 
+.panel-footer {
 	width: 100%;
     height: 5vh;
     border: 1px solid YellowGreen;
@@ -70,11 +70,11 @@ canvas {
 .pink {
     color: pink;
 }
-            
+
 .blue {
     color: blue;
 }
-            
+
 .white {
     color: gray;
 }
